deploy/yaml/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 5000
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helloworld-http-route
  namespace: default
spec:
  parentRefs:
  - name: helloworld-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /hello
    backendRefs:
    - name: helloworld-stable-service
      kind: Service
      port: 5000
    - name: helloworld-canary-service
      kind: Service
      port: 5000
